# carnivores_original

./: README.md
Carnivores/: CMakeLists.txt  ReadmeCommands.md
Carnivores/Hunt/: Audio.cpp  Hunt.cpp  Interface.cpp  Render3DFX.cpp  RenderSoft.cpp  Resources.cpp  mathematics.cpp  renderd3d.cpp  resource.rc
